# AeroRisk

./: .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  phase4ProblemStatements  pyproject.toml  render.yaml  requirements.txt
dashboard/: app.py  requirements.txt
dashboard/.streamlit/: config.toml
dashboard/components/: .gitkeep
dashboard/pages/: .gitkeep
docs/: .gitkeep  FUTURE_DATASETS.md  PHASE_1_FOUNDATION.md  PHASE_2_DATA_INGESTION.md
models/: .gitkeep  anomaly_features.txt  severity_class_mapping.txt  xgboost_risk_features.txt
notebooks/: .gitkeep
pipelines/: .gitkeep  daily_etl.py
reports/recommendations/: recommendations.csv
reports/shap/: SHAP_REPORT.md  shap_feature_importance.csv
scripts/: check_tables.py  data_summary.py  explore_asrs.py  explore_ntsb.py  explore_ntsb_detail.py  fetch_external_data.py  fetch_weather_data.py  generate_weather_data.py  init-db.sql  load_asrs_data.py  load_ntsb_data.py  run_etl.py  test_load_100.py  test_ntsb_fetcher.py  upload_to_huggingface.py  verify_db.py
src/: __init__.py
src/analytics/: __init__.py
src/api/: __init__.py  main.py  schemas.py
src/api/routes/: __init__.py
src/database/: __init__.py  connection.py  models.py
src/database/migrations/: env.py
src/database/migrations/versions/: 001_initial_schema.py
src/etl/: __init__.py  loaders.py  transformers.py  validators.py
src/ingestion/: __init__.py  ntsb_fetcher.py  synthetic_generator.py
src/models/: __init__.py  anomaly_detector.py  explainer.py  model_registry.py  recommendation_engine.py  risk_predictor.py  severity_classifier.py
src/utils/: __init__.py  model_loader.py
tests/e2e/: .gitkeep
tests/integration/: .gitkeep
tests/unit/: .gitkeep
